--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Выполнение лабораторных работ">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<link href="style.css" rel="stylesheet" media="all">
-		<script src="пока нет.js"></script>
+		<script src="game.js"></script>
 		<!--[if lt IE 9]>
 			скриптов для старых браузеров не предусматривается
 		<![endif]-->
