--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 		<meta name="author" content="Дмитрий Филипишин студент группы ИПЗз-13">
 		<meta name="description" content="Выполнение лабораторных работ">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		<link href="style.css" rel="stylesheet" media="all">
-		<script src="game.js"></script>
+		<link href="style\style.css" rel="stylesheet" media="all">
+		<script src="js\game.js"></script>
 		<!--[if lt IE 9]>
 			скриптов для старых браузеров не предусматривается
 		<![endif]-->
 	</head>
 	<body>
 		<header>
-			<img src="logo.jpg" alt="Логотип" height="150" width="550">			
+			<img src="image\logo.jpg" alt="Логотип" height="150" width="550">			
 		</header>
 		<nav>
 			<ul>
