--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Выполнение лабораторных работ">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<link href="style\style.css" rel="stylesheet" media="all">
-		<script src="js\game.js"></script>
+		
 		<!--[if lt IE 9]>
 			скриптов для старых браузеров не предусматривается
 		<![endif]-->
@@ -24,23 +24,10 @@
 		</nav>
 		<main>
 			<aside>
-				<h3>Боковая колонка</h3>
-				<p>боковая колонка для всего остального</p>
-				<h4>Меню сайта</h4>
-				<menu>
-					<li><a href="#">Смотреть фото</a></li>
-					<li><a href="#">Смотреть видео</a></li>
-					<li><a href="#">Слушать музыку</a></li>
-				</menu>
+				<div id="score"></div>
+				<canvas id="tetris" width="240" height="400" />
+				<script src="js/game.js"></script>
 			</aside>
-			<article>
-				<h2>Заголовок статьи</h2>
-				<p>В содержании сайта, может быть текст, фото, видео, аудио ...</p>
-				<section>
-					<h3>Заголовок</h3>
-					<p>здесь могут быть похожие записи, слайдер, баннеры, миниатюры и т.д...</p>
-				</section>
-			</article>
 			<article>
 				<h2>Заголовок статьи</h2>
 				<p>В содержании сайта, может быть текст, фото, видео, аудио ...</p>
