--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
 				<script src="js/game.js"></script>
 			</aside>
 			<article>
-				<h2>Заголовок статьи</h2>
-				<p>В содержании сайта, может быть текст, фото, видео, аудио ...</p>
+				<h2>Клавиши управления</h2>
 				<section>
-					<h3>Заголовок</h3>
-					<p>здесь могут быть похожие записи, слайдер, баннеры, миниатюры и т.д...</p>
+					<p>Здесь описание клавиш, мне реально лень писать...</p>
 				</section>
 			</article>
 		</main>
